Realizado la configuración de consumo de API desde Blazor Server (GET y POST de Paciente)

--- a/LabWebAppBlazor/Components/_Imports.razor
+++ b/LabWebAppBlazor/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using LabWebAppBlazor
 @using LabWebAppBlazor.Components
+@using LabWebAppBlazor.Models
+@using LabWebAppBlazor.Services
