API Rest y Blazor ya recibe el token

--- a/LabWebAppBlazor/Components/Pages/Pacientes.razor
+++ b/LabWebAppBlazor/Components/Pages/Pacientes.razor
@@ -1,9 +1,15 @@
 ﻿@page "/pacientes"
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using LabWebAppBlazor.Models
+@using System.Security.Claims
 @using LabWebAppBlazor.Services
 @inject IApiService ApiService
 @inject IJSRuntime JS
-@rendermode InteractiveServer
+@inject AuthenticationStateProvider AuthProvider
+@inject NavigationManager Navigation
+@rendermode InteractiveServer //IMPORTANTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
+
 
 <h3>Gestión de Pacientes</h3>
 
@@ -96,6 +102,19 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (!user.Identity?.IsAuthenticated ?? true)
+        {
+            var returnUrl = Navigation.ToBaseRelativePath(Navigation.Uri);
+            Navigation.NavigateTo($"/login?ReturnUrl={Uri.EscapeDataString(returnUrl)}");
+            return;
+        }
+
+        Console.WriteLine($"🔐 Usuario autenticado: {user.Identity.Name}");
+        Console.WriteLine($"🔑 Rol(es): {string.Join(", ", user.Claims.Where(c => c.Type == ClaimTypes.Role).Select(c => c.Value))}");
+
         await CargarPacientes();
     }
 
@@ -152,3 +171,4 @@ else
         return edad;
     }
 }
+
