--- a/LabWebAppBlazor/Components/_Imports.razor
+++ b/LabWebAppBlazor/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using LabWebAppBlazor.Components
 @using LabWebAppBlazor.Models
 @using LabWebAppBlazor.Services
+@using LabWebAppBlazor.Components.Pages
+
+
