--- a/LabWebAppBlazor/Components/Pages/Home.razor
+++ b/LabWebAppBlazor/Components/Pages/Home.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h3>Bienvenido</h3>
+<p>Esta es la página principal protegida.</p>
