--- a/LabWebAppBlazor/Components/_Imports.razor
+++ b/LabWebAppBlazor/Components/_Imports.razor
@@ -11,5 +11,7 @@
 @using LabWebAppBlazor.Models
 @using LabWebAppBlazor.Services
 @using LabWebAppBlazor.Components.Pages
+@using Microsoft.AspNetCore.Authorization
+
 
 
