--- a/LabWebAppBlazor/Components/Pages/Home.razor
+++ b/LabWebAppBlazor/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
-﻿@page "/"
-@rendermode InteractiveServer
+﻿@page "/home"
+@attribute [Authorize]
 
 <h3>Bienvenido</h3>
 <p>Esta es la página principal protegida.</p>
