--- a/LabWebAppBlazor/Components/Layout/MainLayout.razor
+++ b/LabWebAppBlazor/Components/Layout/MainLayout.razor
@@ -1,5 +1,8 @@
 ﻿@inherits LayoutComponentBase
-@using LabWebAppBlazor.Components.Layout
+@inject NavigationManager Navigation
+@inject AuthenticationStateProvider AuthProvider
+@using LabWebAppBlazor.Components
+@using Microsoft.AspNetCore.Components.Authorization
 
 <div class="page">
     <div class="sidebar">
@@ -9,6 +12,7 @@
     <main>
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <button class="btn btn-link text-danger ms-3" @onclick="CerrarSesion">Cerrar sesión</button>
         </div>
 
         <article class="content px-4">
@@ -22,3 +26,15 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    private async Task CerrarSesion()
+    {
+        if (AuthProvider is CustomAuthenticationStateProvider customAuth)
+        {
+            await customAuth.SignOutAsync();
+            StateHasChanged();
+            Navigation.NavigateTo("/login", forceLoad: true);
+        }
+    }
+}
