--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -21,7 +21,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
+            <NavLink class="nav-link" href="registrar-usuario">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Módulo 2
             </NavLink>
         </div>
